# advent_of_code_2022

./: Cargo.toml  README.md
crates/day1/src/: main.rs
crates/day2/: Cargo.toml
crates/day2/src/: main.rs
crates/day3/: Cargo.toml
crates/day3/src/: main.rs
crates/day4/: Cargo.toml
crates/day4/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
